kustomize/devops/ci/registries/harbor/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harbor
  labels:
    istio-injection: enabled
