kustomize/devops/ci/registries/harbor/resources/ingress.yaml
# # ---
# # apiVersion: traefik.io/v1alpha1
# # kind: ServersTransport
# # metadata:
# #   name: harbortransport
# #   namespace: harbor

# # spec:
# #   serverName: container.health
# #   insecureSkipVerify: false
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: harbor-ingress
  namespace: harbor
  #annotations:
    #kubernetes.io/ingressClassName: traefik-external
    #cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`registry.container.health`)
      kind: Rule
      services:
        - name: harbor
          port: 443
          scheme: https
          serversTransport: harbor-server-transport
  tls:
    secretName: container-health-tls
